<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_margin="10dp"
>


    <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:gravity="center"
            android:text="@string/exit_alert"
            android:textColor="@color/lightBlack"
            android:textSize="16sp"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/title"
            android:dividerPadding="1dp"
            android:divider="?android:listDivider"
            android:showDividers="middle"
    >


        <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

        >

            <Button
                    android:id="@+id/yesButt"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/yes_exit"
            />

            <ProgressBar
                    android:id="@+id/loadingView"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    android:indeterminateTint="@android:color/white"
                    android:visibility="gone"
                    tools:targetApi="lollipop"/>

        </RelativeLayout>


        <Button
                android:id="@+id/noButt"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:padding="5dp"
                android:background="@color/darkGray"
                android:text="@string/no_exit"
        />


    </LinearLayout>


</RelativeLayout>