<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".View.Activities.SigninActivity">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:clickable="true"
                android:focusableInTouchMode="true"
        >
            <requestFocus/>

            <RelativeLayout
                    android:id="@+id/topRelativeL"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:background="@drawable/top_round_comp"
            >

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/apName"
                        android:text="@string/app_name"
                        android:layout_centerInParent="true"
                        android:textSize="20sp"
                        android:layout_marginTop="5dp"
                        android:paddingTop="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"

                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/appDescription"
                        android:text="@string/app_description"
                        android:textColor="@color/white"
                        android:layout_below="@id/apName"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"

                />


            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/inputDataRL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/topRelativeL"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:layoutDirection="rtl"

            >


                <EditText
                        android:id="@+id/usernameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/username_password_background"
                        android:hint="@string/username_title"
                        android:drawableStart="@mipmap/icon_username"
                        android:gravity="start|center_vertical"
                        android:textAlignment="textStart"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textSize="14sp"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:layout_marginBottom="4dp"
                        android:nextFocusDown="@id/passwordET"
                        tools:targetApi="m"/>
                <EditText
                        android:id="@+id/passwordET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@mipmap/icon_lock"
                        android:textSize="14sp"
                        android:inputType="textPassword"
                        android:gravity="start|center_vertical"
                        android:cursorVisible="true"
                        android:textCursorDrawable="@null"
                        android:textAlignment="textStart"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:background="@drawable/username_password_background"
                        android:layout_below="@id/usernameET"
                        android:hint="@string/password_title"
                        android:layout_marginBottom="15dp"
                        android:imeOptions="actionDone"
                        tools:targetApi="m"/>


                <RelativeLayout
                        android:id="@+id/enterButtonRL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/passwordET"
                >

                    <Button

                            android:id="@+id/enterButton"
                            android:layout_width="match_parent"
                            android:layout_centerInParent="true"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_enter_background"
                            android:textColor="@color/white"
                            android:text="@string/enter_button"

                    />


                    <ProgressBar
                            android:id="@+id/loadingView"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:elevation="5dp"
                            android:layout_centerInParent="true"
                            android:indeterminate="true"
                            android:indeterminateTint="@android:color/white"
                            android:visibility="gone"
                            tools:targetApi="lollipop"/>


                </RelativeLayout>


                <LinearLayout
                        android:id="@+id/demoLL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_below="@id/enterButtonRL"
                        android:orientation="horizontal">


                    <Button android:layout_width="match_parent" android:layout_height="wrap_content"

                            android:id="@+id/demoButton"
                            style="@style/Base.Widget.AppCompat.Button.Borderless"
                            android:text="@string/enter_with_demo"
                            android:textColor="@color/green"
                    />

                </LinearLayout>


                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/demoLL"
                        android:src="@mipmap/icon_talking"
                        android:tint="@color/lightGray"
                        android:layout_centerHorizontal="true"

                />


            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>


</RelativeLayout>