<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="start"
        android:gravity="start"
        android:maxHeight="80dp"
        android:minHeight="60dp"
        android:layout_height="wrap_content">


    <LinearLayout
            android:id="@+id/mainLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

        <RelativeLayout
                android:id="@+id/imageRL"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView

                    android:id="@+id/userImage"
                    android:layout_width="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"

                    android:src="@mipmap/icon_username_white"
                    app:civ_circle_background_color="@color/lightGray"
                    android:layout_height="50dp"/>

        </RelativeLayout>

        <LinearLayout
                android:id="@+id/nameAndTextLL"
                android:layout_weight="4.5"

                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">


            <LinearLayout

                    android:id="@+id/nameLL"
                    android:layout_width="match_parent"
                          android:layout_height="0dp"
                          android:layout_weight="1"
                          android:orientation="horizontal">

                <TextView
                        android:id="@+id/itemNameTV"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:text="@string/item_name"
                        android:layout_gravity="center"
                        android:gravity="start|center_vertical"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:maxLines="1"
                        android:lines="1"
                        android:ellipsize="end"
                        android:textStyle="bold"

                />
                <TextView
                        android:id="@+id/domainNameTV"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_gravity="center"
                        android:text="@string/domain_name"
                        android:gravity="center|center_vertical"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:maxLines="1"
                        android:lines="1"
                        android:ellipsize="end"

                />
                <ImageView
                        android:id="@+id/statusOfMessageImage"
                        android:adjustViewBounds="true"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:src="@mipmap/icon_double_tick"
                        android:layout_gravity="center"
                        android:layout_height="30dp"/>

                <TextView
                        android:id="@+id/dateTV"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:text="@string/date_text"
                        android:gravity="center|center_vertical"
                        android:layout_gravity="center"
                        android:textSize="10sp"
                        android:maxLines="1"
                        android:lines="1"
                        android:ellipsize="end"
                        android:layout_height="wrap_content"/>


            </LinearLayout>


            <LinearLayout
                    android:id="@+id/textLL"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:padding="1dp"
                    android:layout_margin="2dp"
                          android:layout_weight="1.5"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/itemTextTV"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:text="@string/item_text"
                        android:layout_gravity="center"
                        android:maxLines="2"
                        android:lines="2"
                        android:ellipsize="end"
                        android:gravity="center_vertical|start"
                        android:textSize="12sp"
                        android:layout_height="wrap_content"/>


                <FrameLayout android:layout_width="0dp"
                             android:layout_weight="1"
                             android:layout_gravity="center"
                             android:layout_height="wrap_content">


                    <TextView
                            android:id="@+id/itemUnreadMessagesTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:textColor="@color/white"
                            android:background="@drawable/background_unread_messages_tv"
                            android:text="@string/item_unread_messages"
                            android:layout_gravity="center"
                            android:gravity="center"
                    />


                </FrameLayout>



            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>